    can be flushed with the Utilities->Flush Remote Directory Cache command
  - Tooltips are shown for obscured and truncated file names
  - More flexible sorting
  - Frequently-visited directories can be stored in a 'favorites' list
  - Optional 'tree view' allows quick viewing of an entire directory
    hierarchy
  - Hidden files can optionally be displayed
  - Geometry of file chooser is saved
- Utilities->File System Browser displays a stand-alone version of the file
  chooser

+ Enhancements

- Major changes to VFS code to support browsing
- Updated JavaScript mode (Ollie Rutherford)
- Tool bar buttons now have a 'rollover' effect
- Global Options dialog box re-arranged somewhat
- 'Send' command moved to a plugin, out of the core
- Repeated actions can now be undone in one operation
- Macro invocations can now be undone in one operation

+ Bug Fixes

- Plugins couldn't be removed on systems that disallow removing open files,
  such as Windows (since 2.6pre1)
- FtpVFS.getFileLength() always returned 0 (since 2.6pre1)
- FtpVFS would throw a NullPointerException if an error occurred while
  connecting to the FTP server
- An autosave setting of '0' caused problems (since 2.6pre1)
- Macros invoked using keyboard shortcuts would always fail with a
  "macro not found" error (since 2.6pre1)
- 'HTML/Close Tag' macro called on non-existent goto-end-indent action
- HTMLActionButton.java didn't compile on JDK 1.3 (since 2.6pre1)

+ API Changes

- org.gjt.sp.jedit.REFileFilter class removed
- Many changes made to org.gjt.sp.jedit.VFS class
- New AbstractOptionPane.addSeparator(String) method
- New methods added to GUIUtilities class:
  input(Component comp, String name, String[] args, String def);
  inputProperty(Component comp, String name, String[] args, String def);
- MiscUtilities.constructPath() no longer returns a canonical path (ie,
  with all symlinks resolved)
- New method: GUIUtilities.loadMenu(String). Plugins that target jEdit